--- a/index.html
+++ b/index.html
@@ -434,6 +434,10 @@
             width: auto !important;
         }
 
+        .price-link {
+          color: white !important; /* 強制的に白色を適用 */
+        }
+
         /* タイトルフォントサイズ調整 */
         .hero-content h2 {
             font-size: 2.7rem !important; /* 元のvar(--fs-xl)は3.5remなので小さくします */
