--- a/new-recruit.html
+++ b/new-recruit.html
@@ -27,7 +27,7 @@
     <header class="fixed-header">
         <div class="logo">
             <a href="index.html" aria-label="Melody Lab ホームページ">
-                <img src="images/ms_logo.jpg" alt="Melody Lab" class="logo-image">
+                <img src="images/music_school_logo_rem.png" alt="Melody Lab" class="logo-image" style="box-shadow: none; border-radius: 0;">
                 <span class="logo-text">Melody Lab</span>
             </a>
         </div>
@@ -300,7 +300,7 @@
         <div class="footer-container">
             <div class="footer-col">
                 <div class="footer-logo">
-                    <img src="images/ms_logo.jpg" alt="Melody Lab">
+                    <img src="images/music_school_logo_rem.png" alt="Melody Lab">
                     <h3 class="footer-logo-text">Melody Lab</h3>
                 </div>
                 <p class="footer-about">
