--- a/new-recruit.html
+++ b/new-recruit.html
@@ -108,7 +108,7 @@
                                     <li><strong>雇用形態</strong> 業務委託</li>
                                     <li><strong>給与</strong> レッスン60分あたり 3,000円〜</li>
                                     <li><strong>勤務時間</strong> シフト制（週1日〜応相談）</li>
-                                    <li><strong>勤務地</strong> オンラインまたは新宿スタジオ</li>
+                                    <li><strong>勤務地</strong> オンラインのみ</li>
                                 </ul>
                                 <h4 class="requirements-title">応募条件</h4>
                                 <ul class="requirements-list">
@@ -131,7 +131,7 @@
                                     <li><strong>雇用形態</strong> 業務委託</li>
                                     <li><strong>給与</strong> レッスン60分あたり 3,000円〜</li>
                                     <li><strong>勤務時間</strong> シフト制（週1日〜応相談）</li>
-                                    <li><strong>勤務地</strong> オンラインまたは新宿スタジオ</li>
+                                    <li><strong>勤務地</strong> オンラインのみ</li>
                                 </ul>
                                 <h4 class="requirements-title">応募条件</h4>
                                 <ul class="requirements-list">
@@ -154,7 +154,7 @@
                                     <li><strong>雇用形態</strong> 業務委託</li>
                                     <li><strong>給与</strong> レッスン60分あたり 3,500円〜</li>
                                     <li><strong>勤務時間</strong> シフト制（週1日〜応相談）</li>
-                                    <li><strong>勤務地</strong> オンラインまたは新宿スタジオ</li>
+                                    <li><strong>勤務地</strong> オンラインのみ</li>
                                 </ul>
                                 <h4 class="requirements-title">応募条件</h4>
                                 <ul class="requirements-list">
@@ -177,7 +177,7 @@
                                     <li><strong>雇用形態</strong> 業務委託</li>
                                     <li><strong>給与</strong> レッスン60分あたり 3,500円〜</li>
                                     <li><strong>勤務時間</strong> シフト制（週1日〜応相談）</li>
-                                    <li><strong>勤務地</strong> オンラインまたは新宿スタジオ</li>
+                                    <li><strong>勤務地</strong> オンラインのみ</li>
                                 </ul>
                                 <h4 class="requirements-title">応募条件</h4>
                                 <ul class="requirements-list">
