--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero.jpg" alt="Music School" loading="lazy">
+                <img src="images/ml_hero.jpg" alt="Music School" loading="lazy">
             </div>
         </section>
 
