--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
     <div class="menu-overlay"></div>
 
     <main>
-        <section id="home" class="section hero">
+        <section id="home" class="section hero" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="hero-content">
                 <div class="hero-badge">音楽教室</div>
                 <h2>音楽を、<span class="accent">もっと自由に。</span></h2>
