--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
     <div class="menu-overlay"></div>
 
     <main>
-        <section id="home" class="section hero" style="padding-top: 40px; padding-bottom: 40px;">
-            <div class="hero-content">
+        <section id="home" class="section hero">
+            <div class="hero-content" style="padding-top: 20px !important; padding-bottom: 20px !important;">
                 <div class="hero-badge">音楽教室</div>
                 <h2>音楽を、<span class="accent">もっと自由に。</span></h2>
                 <p>自宅で学べる、プロの音楽レッスン。</p>
