--- a/contact.html
+++ b/contact.html
@@ -181,16 +181,8 @@
                 <h4 class="footer-heading">お問い合わせ</h4>
                 <ul class="footer-contact">
                     <li>
-                        <i class="fas fa-map-marker-alt"></i>
-                        <span>〒160-0022<br>東京都新宿区新宿X-XX-XX<br>XXXビル 5F</span>
-                    </li>
-                    <li>
-                        <i class="fas fa-phone"></i>
-                        <span>03-XXXX-XXXX<br>（平日 10:00〜19:00）</span>
-                    </li>
-                    <li>
                         <i class="fas fa-envelope"></i>
-                        <span>info@melodylab.jp</span>
+                        <span>melodylab.company@gmail.com</span>
                     </li>
                 </ul>
             </div>
