--- a/new-recruit.html
+++ b/new-recruit.html
@@ -241,7 +241,7 @@
                 <!-- 応募フォーム -->
                 <div class="contact-form-container" id="application-form">
                     <h3 class="process-title">応募フォーム</h3>
-                    <form id="recruitForm" class="contact-form" action="https://formsubmit.co/5fcf357d718c6a525204ef9aacff84ed" method="POST">
+                    <form id="recruitForm" class="contact-form" action="https://formsubmit.co/melodylab.company@gmail.com" method="POST">
                         <!-- FormSubmit設定用の隠しフィールド -->
                         <input type="hidden" name="_subject" value="【Melody Lab】講師応募がありました">
                         <input type="hidden" name="_captcha" value="false">
@@ -259,9 +259,8 @@
                             <div class="error-message">正しいメールアドレスを入力してください</div>
                         </div>
                         <div class="form-group">
-                            <input type="tel" id="phone" name="phone" placeholder=" " required>
-                            <label for="phone">電話番号<span class="required">*</span></label>
-                            <div class="error-message">電話番号を入力してください</div>
+                            <input type="tel" id="phone" name="phone" placeholder=" ">
+                            <label for="phone">電話番号</label>
                         </div>
                         <div class="form-group">
                             <select id="position" name="inquiry_type" required>
