FormSubmit実装修正: new-recruit.htmlのフォーム設定を改善

--- a/new-recruit.html
+++ b/new-recruit.html
@@ -247,6 +247,7 @@
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next" value="https://reiohtsuki-git.github.io/music_school_hp.io/recruit-thanks.html">
                         <input type="hidden" name="_template" value="table">
+                        <input type="hidden" name="_autoresponse" value="ご応募ありがとうございます。書類を拝見し、1週間以内に担当者よりご連絡いたします。">
                         
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder=" " required>
