--- a/about.html
+++ b/about.html
@@ -666,7 +666,7 @@
             </div>
             
             <div class="mission-image" data-aos="fade-left">
-                <img src="images/mission_image.png" alt="ミッションイメージ">
+                <img src="images/mission.jpg" alt="ミッションイメージ">
             </div>
         </section>
 
