fix: ヘッダーロゴをindex.htmlと同様にエフェクト除外して統一

--- a/about.html
+++ b/about.html
@@ -392,8 +392,8 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <a href="index.html">
-                <img src="images/ms_logo.jpg" alt="Melody Lab" class="logo-image">
+            <a href="index.html" aria-label="Melody Lab ホームページ">
+                <img src="images/music_school_logo_rem.png" alt="Melody Lab" class="logo-image" style="box-shadow: none; border-radius: 0;">
                 <span class="logo-text">Melody Lab</span>
             </a>
         </div>
