--- a/about.html
+++ b/about.html
@@ -545,7 +545,7 @@
             </div>
             
             <div class="mission-image" data-aos="fade-left">
-                <img src="images/mission.jpg" alt="ミッションイメージ">
+                <img src="images/mission_re.jpg" alt="ミッションイメージ">
             </div>
         </section>
 
