--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-music"></i> Compose Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/cCOMP_LESSON.png" alt="Compose Lesson" loading="lazy">
+                        <img src="images/COMP_LESSON.png" alt="Compose Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>メロディーの作り方、コード進行、楽曲構成など作曲の基礎から応用まで</p>
