--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-guitar"></i> Guitar Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/guitar.jpg" alt="Guitar Lesson" loading="lazy">
+                        <img src="images/GUITAR_LESSON.png" alt="Guitar Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>初心者からプロまで、あなたのレベルに合わせたギターレッスン</p>
@@ -673,7 +673,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-guitar"></i> Bass Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/bass.jpg" alt="Bass Lesson" loading="lazy">
+                        <img src="images/BASS_LESSON.png" alt="Bass Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>リズム感を養い、バンドの要となるベーステクニックを習得</p>
@@ -686,7 +686,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-laptop"></i> DTM Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/dtm.jpg" alt="DTM Lesson" loading="lazy">
+                        <img src="images/DTM_LESSON.png" alt="DTM Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>音楽制作ソフトの基本操作から、プロ品質の楽曲制作まで</p>
@@ -699,7 +699,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-music"></i> Compose Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/compose_2.jpg" alt="Compose Lesson" loading="lazy">
+                        <img src="images/COMP_LESSON.png" alt="Compose Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>メロディーの作り方、コード進行、楽曲構成など作曲の基礎から応用まで</p>
