--- a/index.html
+++ b/index.html
@@ -595,21 +595,29 @@
             font-size: 2.7rem !important; /* 元のvar(--fs-xl)は3.5remなので小さくします */
         }
 
-        /* 楽器画像サイズ修正 - 強制適用 */
-        .instrument-card .instrument-image {
+        /* 楽器画像の強制サイズ修正 - 最優先適用 */
+        #instruments .instrument-card .instrument-image {
             height: 350px !important;
             width: 100% !important;
-            overflow: hidden !important;
-            position: relative !important;
-            display: block !important;
+            max-width: 100% !important;
+            min-height: 350px !important;
         }
         
-        .instrument-card .instrument-image img {
+        #instruments .instrument-card .instrument-image img {
             width: 100% !important;
             height: 100% !important;
+            max-width: 100% !important;
+            max-height: 100% !important;
+            min-width: 100% !important;
+            min-height: 100% !important;
             object-fit: cover !important;
             object-position: center !important;
-            display: block !important;
+        }
+        
+        /* グリッドレイアウトの調整も追加 */
+        #instruments .instruments-grid {
+            grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)) !important;
+            gap: 2.5rem !important;
         }
     </style>
 </head>
