--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-guitar"></i> Bass Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/BASS_LESSON.png" alt="Bass Lesson" loading="lazy">
+                        <img src="images/BASS_LESSON_2.png" alt="Bass Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>リズム感を養い、バンドの要となるベーステクニックを習得</p>
