--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-guitar"></i> Guitar Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/GUITAR_LESSON.png" alt="Guitar Lesson" loading="lazy">
+                        <img src="images/GUITAR_LESSON_2.png" alt="Guitar Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>初心者からプロまで、あなたのレベルに合わせたギターレッスン</p>
@@ -711,7 +711,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-laptop"></i> DTM Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/DTM_LESSON.png" alt="DTM Lesson" loading="lazy">
+                        <img src="images/DTM_LESSON_2.png" alt="DTM Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>音楽制作ソフトの基本操作から、プロ品質の楽曲制作まで</p>
@@ -724,7 +724,7 @@
                 <div class="instrument-card">
                     <h3><i class="fas fa-music"></i> Compose Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/COMP_LESSON.png" alt="Compose Lesson" loading="lazy">
+                        <img src="images/COMP_LESSON_2.png" alt="Compose Lesson" loading="lazy">
                         <div class="overlay">
                             <div class="overlay-content">
                                 <p>メロディーの作り方、コード進行、楽曲構成など作曲の基礎から応用まで</p>
