--- a/index.html
+++ b/index.html
@@ -597,23 +597,29 @@
 
         /* 楽器画像の強制サイズ修正 - 最優先適用 */
         #instruments .instrument-card .instrument-image {
-            height: 350px !important;
+            height: 400px !important;
             width: 100% !important;
             max-width: 100% !important;
-            min-height: 350px !important;
+            min-height: 400px !important;
+            overflow: hidden !important;
+            position: relative !important;
         }
         
         #instruments .instrument-card .instrument-image img {
-            width: 100% !important;
-            height: 100% !important;
-            max-width: 100% !important;
-            max-height: 100% !important;
-            min-width: 100% !important;
-            min-height: 100% !important;
+            width: 120% !important;
+            height: 120% !important;
+            max-width: 120% !important;
+            max-height: 120% !important;
+            min-width: 120% !important;
+            min-height: 120% !important;
             object-fit: cover !important;
             object-position: center !important;
+            position: absolute !important;
+            top: 50% !important;
+            left: 50% !important;
+            transform: translate(-50%, -50%) !important;
         }
-        
+
         /* グリッドレイアウトの調整も追加 */
         #instruments .instruments-grid {
             grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)) !important;
