--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -182,7 +182,7 @@
                 <div class="thanks-icon">
                     <i class="fas fa-check-circle"></i>
                 </div>
-                <h1 class="thanks-title">お問い合わせありがとうございました</h1>
+                <h1 class="thanks-title">お問い合わせありがとうございました！</h1>
                 <div class="thanks-message">
                     <p>お問い合わせを受け付けました。<br>
                     内容を確認し、24時間以内に担当者よりご返信いたします。</p>
