--- a/recruit-thanks.html
+++ b/recruit-thanks.html
@@ -182,7 +182,7 @@
                 <div class="thanks-icon">
                     <i class="fas fa-check-circle"></i>
                 </div>
-                <h1 class="thanks-title">ご応募ありがとうございました</h1>
+                <h1 class="thanks-title">ご応募ありがとうございました！</h1>
                 <div class="thanks-message">
                     <p>講師募集へのご応募を受け付けました。<br>
                     書類を拝見し、1週間以内に担当者よりご連絡いたします。</p>
