--- a/index.html
+++ b/index.html
@@ -840,6 +840,9 @@
                         <div class="testimonial-quote">"</div>
                         <div class="testimonial-content">
                             <div class="testimonial-author">
+                                <div class="testimonial-avatar">
+                                    <img src="images/student-gt.png" alt="田中さんの写真" class="avatar-image">
+                                </div>
                                 <div class="testimonial-author-info">
                                     <h4>田中さん（30代・会社員）</h4>
                                     <p>ギターコース受講中</p>
@@ -857,6 +860,9 @@
                         <div class="testimonial-quote">"</div>
                         <div class="testimonial-content">
                             <div class="testimonial-author">
+                                <div class="testimonial-avatar">
+                                    <img src="images/student_dtm.png" alt="高橋さんの写真" class="avatar-image">
+                                </div>
                                 <div class="testimonial-author-info">
                                     <h4>高橋さん（20代・学生）</h4>
                                     <p>DTMコース受講中</p>
@@ -874,6 +880,9 @@
                         <div class="testimonial-quote">"</div>
                         <div class="testimonial-content">
                             <div class="testimonial-author">
+                                <div class="testimonial-avatar">
+                                    <img src="images/student_bass.png" alt="伊藤さんの写真" class="avatar-image">
+                                </div>
                                 <div class="testimonial-author-info">
                                     <h4>伊藤さん（40代・自営業）</h4>
                                     <p>ベースコース受講中</p>
