--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                         <div class="testimonial-content">
                             <div class="testimonial-author">
                                 <div class="testimonial-avatar">
-                                    <img src="images/student-gt.png" alt="田中さんの写真" class="avatar-image">
+                                    <img src="images/student_gt.png" alt="田中さんの写真" class="avatar-image">
                                 </div>
                                 <div class="testimonial-author-info">
                                     <h4>田中さん（30代・会社員）</h4>
