--- a/terms.html
+++ b/terms.html
@@ -36,7 +36,7 @@
             padding: 120px 2rem 4rem;
         }
 
-        ..page-header {
+        .page-header {
             text-align: center;
             margin-bottom: 3rem;
             padding: 4rem 2rem 3rem;
@@ -174,19 +174,6 @@
             font-weight: 500;
         }
 
-        .page-title {
-            font-size: 2.5rem;
-            color: var(--primary);
-            font-weight: 700;
-            margin-bottom: 1rem;
-        }
-
-        .page-subtitle {
-            font-size: 1.1rem;
-            color: var(--text-light);
-            line-height: 1.6;
-        }
-
         .terms-content {
             background: white;
             border-radius: 12px;
@@ -318,6 +305,10 @@
         @media (max-width: 768px) {
             .terms-container {
                 padding: 100px 1rem 2rem;
+            }
+
+            .page-header {
+                padding: 3rem 1.5rem 2rem;
             }
 
             .page-title {
