--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@
         <div class="footer-bottom">
             <div class="footer-bottom-links">
                 <a href="terms.html">利用規約</a>
-                <a href="#">サイトポリシー</a>   
+                <a href="policy.html">サイトポリシー</a> 
             </div>
             <p>&copy; 2025 Melody Lab 音楽教室 All Rights Reserved.</p>
         </div>
