ナビゲーション表記を日本語に統一 - 英語表記問題を修正

--- a/admission.html
+++ b/admission.html
@@ -352,12 +352,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="instruments.html">Instruments</a></li>
-                <li><a href="lessons.html">Lessons</a></li>
-                <li><a href="price.html">Pricing</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="instruments.html">楽器</a></li>
+                <li><a href="lessons.html">レッスン</a></li>
+                <li><a href="price.html">料金</a></li>
+                <li><a href="about.html">私たちについて</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
