--- a/admission.html
+++ b/admission.html
@@ -483,7 +483,7 @@
                 <button type="submit" class="admission-button">入会する <i class="fas fa-arrow-right"></i></button>
                 
                 <div class="form-note" style="text-align: center; margin-top: 1.5rem;">
-                    <p>入会することで、<a href="#" style="color: var(--primary);">利用規約</a>および<a href="#" style="color: var(--primary);">プライバシーポリシー</a>に同意したことになります。</p>
+                    <p>入会することで、<a href="#" style="color: var(--primary);">利用規約</a>および<a href="#" style="color: var(--primary);">サイトポリシー</a>に同意したことになります。</p>
                 </div>
             </form>
         </section>
