--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
                     <div class="position-cards">
                         <div class="position-card">
                             <div class="position-header">
-                                <h3><i class="fas fa-guitar"></i> ギター講師</h3>
+                                <h3><i class="fas fa-guitar"></i> ギター・ベース講師</h3>
                             </div>
                             <div class="position-content">
                                 <h4>ポジション詳細</h4>
