--- a/terms.html
+++ b/terms.html
@@ -404,10 +404,10 @@
                     <h2>第2条（サービス内容）</h2>
                     <p>当教室は、以下のサービスを提供します：</p>
                     <ul>
-                        <li>オンライン音楽レッスン（ギター、ベース、DTM、作曲等）</li>
-                        <li>レッスン予約・キャンセルシステム</li>
-                        <li>学習サポート資料の提供</li>
-                        <li>その他当教室が必要と認めるサービス</li>
+                        <li>１．オンライン音楽レッスン（ギター、ベース、DTM、作曲等）</li>
+                        <li>２．レッスン予約・キャンセルシステム</li>
+                        <li>３．学習サポート資料の提供</li>
+                        <li>４．その他当教室が必要と認めるサービス</li>
                     </ul>
                 </div>
 
@@ -461,12 +461,12 @@
                     <h2>第6条（禁止事項）</h2>
                     <p>受講者は、以下の行為を行ってはならないものとします：</p>
                     <ul>
-                        <li>レッスン内容の無断録画・録音・配信</li>
-                        <li>講師への迷惑行為・ハラスメント</li>
-                        <li>虚偽の情報の提供</li>
-                        <li>第三者への迷惑行為</li>
-                        <li>法令に違反する行為</li>
-                        <li>その他当教室が不適切と判断する行為</li>
+                        <li>１．レッスン内容の無断録画・録音・配信</li>
+                        <li>２．講師への迷惑行為・ハラスメント</li>
+                        <li>３．虚偽の情報の提供</li>
+                        <li>４．第三者への迷惑行為</li>
+                        <li>５．法令に違反する行為</li>
+                        <li>６．その他当教室が不適切と判断する行為</li>
                     </ul>
                 </div>
 
@@ -474,10 +474,10 @@
                     <h2>第7条（個人情報保護）</h2>
                     <p>当教室は、受講者の個人情報を適切に管理し、以下の目的以外では使用いたしません：</p>
                     <ul>
-                        <li>レッスンサービスの提供</li>
-                        <li>料金の請求・決済</li>
-                        <li>サービス向上のためのアンケート・連絡</li>
-                        <li>重要なお知らせの配信</li>
+                        <li>１．レッスンサービスの提供</li>
+                        <li>２．料金の請求・決済</li>
+                        <li>３．サービス向上のためのアンケート・連絡</li>
+                        <li>４．重要なお知らせの配信</li>
                     </ul>
                 </div>
 
@@ -485,10 +485,10 @@
                     <h2>第8条（免責事項）</h2>
                     <p>当教室は、以下の事項について責任を負わないものとします：</p>
                     <ul>
-                        <li>受講者の機器・通信環境による受講障害</li>
-                        <li>自然災害・システム障害等による不可抗力のサービス中断</li>
-                        <li>受講者の練習不足による技術向上の遅れ</li>
-                        <li>その他当教室の故意・重過失によらない損害</li>
+                        <li>１．受講者の機器・通信環境による受講障害</li>
+                        <li>２．自然災害・システム障害等による不可抗力のサービス中断</li>
+                        <li>３．受講者の練習不足による技術向上の遅れ</li>
+                        <li>４．その他当教室の故意・重過失によらない損害</li>
                     </ul>
                 </div>
 
