--- a/terms.html
+++ b/terms.html
@@ -402,7 +402,7 @@
 
                 <div class="terms-section">
                     <h2>第2条（サービス内容）</h2>
-                    <p>当教室は、以下のサービスを提供します：</p>
+                    <p>当教室は、以下のサービスを提供します。</p>
                     <ul>
                         <li>１．オンライン音楽レッスン（ギター、ベース、DTM、作曲等）</li>
                         <li>２．レッスン予約・キャンセルシステム</li>
@@ -459,7 +459,7 @@
 
                 <div class="terms-section">
                     <h2>第6条（禁止事項）</h2>
-                    <p>受講者は、以下の行為を行ってはならないものとします：</p>
+                    <p>受講者は、以下の行為を行ってはならないものとします。</p>
                     <ul>
                         <li>１．レッスン内容の無断録画・録音・配信</li>
                         <li>２．講師への迷惑行為・ハラスメント</li>
@@ -472,7 +472,7 @@
 
                 <div class="terms-section">
                     <h2>第7条（個人情報保護）</h2>
-                    <p>当教室は、受講者の個人情報を適切に管理し、以下の目的以外では使用いたしません：</p>
+                    <p>当教室は、受講者の個人情報を適切に管理し、以下の目的以外では使用いたしません。</p>
                     <ul>
                         <li>１．レッスンサービスの提供</li>
                         <li>２．料金の請求・決済</li>
@@ -483,7 +483,7 @@
 
                 <div class="terms-section">
                     <h2>第8条（免責事項）</h2>
-                    <p>当教室は、以下の事項について責任を負わないものとします：</p>
+                    <p>当教室は、以下の事項について責任を負わないものとします。</p>
                     <ul>
                         <li>１．受講者の機器・通信環境による受講障害</li>
                         <li>２．自然災害・システム障害等による不可抗力のサービス中断</li>
