--- a/policy.html
+++ b/policy.html
@@ -428,12 +428,12 @@
 
                 <div class="policy-section">
                     <h2>免責事項</h2>
-                    <p>当サイトの利用によって生じた損害について、以下の場合は責任を負いかねます：</p>
+                    <p>当サイトの利用によって生じた損害について、以下の場合は責任を負いかねます。</p>
                     <ul>
-                        <li>サイト情報の利用による直接的・間接的損害</li>
-                        <li>システム障害やメンテナンスによるサービス中断</li>
-                        <li>第三者による不正アクセスや情報漏洩</li>
-                        <li>外部リンク先サイトでの問題</li>
+                        <li>１．サイト情報の利用による直接的・間接的損害</li>
+                        <li>２．システム障害やメンテナンスによるサービス中断</li>
+                        <li>３．第三者による不正アクセスや情報漏洩</li>
+                        <li>４．外部リンク先サイトでの問題</li>
                     </ul>
 
                     <div class="highlight-box">
@@ -448,10 +448,10 @@
                     
                     <h3>利用目的</h3>
                     <ul>
-                        <li>レッスンサービスの提供</li>
-                        <li>お問い合わせへの回答</li>
-                        <li>サービス向上のための分析</li>
-                        <li>重要なお知らせの配信</li>
+                        <li>１．レッスンサービスの提供</li>
+                        <li>２．お問い合わせへの回答</li>
+                        <li>３．サービス向上のための分析</li>
+                        <li>４．重要なお知らせの配信</li>
                     </ul>
 
                     <h3>第三者への提供</h3>
@@ -462,35 +462,35 @@
                     <h2>Cookie（クッキー）について</h2>
                     <p>当サイトでは、サービス向上のためCookieを使用する場合があります。</p>
                     <ul>
-                        <li>サイトの利用状況の分析</li>
-                        <li>ユーザビリティの向上</li>
-                        <li>広告配信の最適化（該当する場合）</li>
+                        <li>１．サイトの利用状況の分析</li>
+                        <li>２．ユーザビリティの向上</li>
+                        <li>３．広告配信の最適化（該当する場合）</li>
                     </ul>
                     <p>Cookieの利用を希望しない場合は、ブラウザの設定で無効にできます。</p>
                 </div>
 
                 <div class="policy-section">
                     <h2>外部サービスの利用</h2>
-                    <p>当サイトでは、以下の外部サービスを利用する場合があります：</p>
+                    <p>当サイトでは、以下の外部サービスを利用する場合があります。</p>
                     <ul>
-                        <li>Google Analytics（アクセス解析）</li>
-                        <li>Google Fonts（フォント配信）</li>
-                        <li>Font Awesome（アイコン表示）</li>
-                        <li>その他のCDNサービス</li>
+                        <li>１．Google Analytics（アクセス解析）</li>
+                        <li>２．Google Fonts（フォント配信）</li>
+                        <li>３．Font Awesome（アイコン表示）</li>
+                        <li>４．その他のCDNサービス</li>
                     </ul>
                     <p>これらのサービスは各社のプライバシーポリシーに従って運用されています。</p>
                 </div>
 
                 <div class="policy-section">
                     <h2>禁止事項</h2>
-                    <p>当サイトの利用にあたり、以下の行為を禁止します：</p>
+                    <p>当サイトの利用にあたり、以下の行為を禁止します。</p>
                     <ul>
-                        <li>法令に違反する行為</li>
-                        <li>他者の権利を侵害する行為</li>
-                        <li>サイトの運営を妨害する行為</li>
-                        <li>不正アクセスやハッキング</li>
-                        <li>虚偽情報の提供</li>
-                        <li>スパム行為や迷惑行為</li>
+                        <li>１．法令に違反する行為</li>
+                        <li>２．他者の権利を侵害する行為</li>
+                        <li>３．サイトの運営を妨害する行為</li>
+                        <li>４．不正アクセスやハッキング</li>
+                        <li>５．虚偽情報の提供</li>
+                        <li>６．スパム行為や迷惑行為</li>
                     </ul>
                 </div>
 
