--- a/policy.html
+++ b/policy.html
@@ -420,9 +420,9 @@
                     <h2>著作権・知的財産権</h2>
                     <p>当サイトに掲載されている文章、画像、音楽、動画、デザイン等のコンテンツは、当教室または正当な権利者に帰属します。</p>
                     <ul>
-                        <li>無断転載・複製・配布を禁止します</li>
-                        <li>商用利用は事前の許可が必要です</li>
-                        <li>引用する場合は適切な出典表示をお願いします</li>
+                        <li>１．無断転載・複製・配布を禁止します。</li>
+                        <li>２．商用利用は事前の許可が必要です。</li>
+                        <li>３．引用する場合は適切な出典表示をお願いします。</li>
                     </ul>
                 </div>
 
@@ -508,7 +508,7 @@
 
                 <div class="contact-info">
                     <h3><i class="fas fa-envelope"></i> お問い合わせ</h3>
-                    <p>当ポリシーに関するご質問は、下記までお気軽にお問い合わせください</p>
+                    <p>当ポリシーに関するご質問は、下記までお気軽にお問い合わせください。</p>
                     <p><strong>melodylab.company@gmail.com</strong></p>
                     <p style="margin-top: 1rem; font-size: 0.9rem;">
                         制定日：2025年5月29日<br>
