--- a/terms.html
+++ b/terms.html
@@ -505,7 +505,7 @@
 
                 <div class="contact-info">
                     <h3><i class="fas fa-envelope"></i> お問い合わせ</h3>
-                    <p>本規約に関するご質問は、下記までお気軽にお問い合わせください</p>
+                    <p>本規約に関するご質問は、下記までお気軽にお問い合わせください。</p>
                     <p><strong>melodylab.company@gmail.com</strong></p>
                     <p style="margin-top: 1rem; font-size: 0.9rem;">
                         制定日：2025年5月29日<br>
