--- a/about.html
+++ b/about.html
@@ -387,6 +387,21 @@
             height: 60px !important;
             width: auto !important;
         }
+
+        /* フッタースタイル */
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background-color: var(--background);
+            border-top: 1px solid #e9ecef;
+            margin-top: 3rem;
+        }
+        
+        footer p {
+            margin: 0;
+            color: var(--text-light);
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
