--- a/admission.html
+++ b/admission.html
@@ -252,6 +252,21 @@
             text-align: center;
         }
 
+        /* フッタースタイル */
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background-color: var(--background);
+            border-top: 1px solid #e9ecef;
+            margin-top: 3rem;
+        }
+        
+        footer p {
+            margin: 0;
+            color: var(--text-light);
+            font-size: 0.9rem;
+        }
+
         /* フォーム送信時のアニメーション */
         @keyframes submitPulse {
             0% {
