--- a/index.html
+++ b/index.html
@@ -773,12 +773,20 @@
         </nav>
     </header>
 
+    <!-- 無料体験レッスンバナー（ヘッダー直後に追加） -->
+    <div class="trial-lesson-banner" id="trial-banner">
+        <div class="trial-content">
+            <span class="trial-icon">✨</span>
+            <span class="trial-text">無料体験レッスン実施中</span>
+            <button class="trial-close" id="trial-close" aria-label="バナーを閉じる">×</button>
+        </div>
+    </div>        
+
     <div class="menu-overlay"></div>
 
     <main>
         <section id="home" class="section hero">
             <div class="hero-content" style="padding-top: 20px !important; padding-bottom: 20px !important;">
-                <div class="hero-badge">音楽教室</div>
                 <h2>音楽を、<span class="accent">もっと自由に。</span></h2>
                 <p>自宅で学べる、プロの音楽レッスン。</p>
                 <div class="hero-actions">
