--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         /* 無料体験レッスンバナー */
         .trial-lesson-banner {
             position: fixed;
-            top: 320px; /* 「音楽を、」の真上に配置 */
+            top: 250px; 
             left: 200px;
             transform: none;
             background: linear-gradient(135deg, #10B981 0%, #059669 100%);
