--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <style>
         /* 無料体験レッスンバナー */
         .trial-lesson-banner {
-            position: absolute; /* fixedからabsoluteに変更 */
-            top: 170px; /* ヘッダー + 適切な間隔 */
+            position: absolute; 
+            top: 180px; 
             left: 200px;
             transform: none;
             background: linear-gradient(135deg, #10B981 0%, #059669 100%);
