--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                 <!-- ギターレッスン -->
                 <div id="guitar-lesson" class="lesson-item">
                     <div class="lesson-icon">
-                        <i class="fas fa-guitar"></i>
+                        <img src="images/icon_guitar.png" alt="Guitar Icon">
                     </div>
                     <div class="lesson-details">
                         <h3>Guitar Lesson</h3>
@@ -1026,7 +1026,7 @@
                 <!-- ベースレッスン -->
                 <div id="bass-lesson" class="lesson-item">
                     <div class="lesson-icon">
-                        <i class="fas fa-guitar"></i>
+                        <img src="images/icon_bass.png" alt="Bass Icon">
                     </div>
                     <div class="lesson-details">
                         <h3>Bass Lesson</h3>
@@ -1046,7 +1046,7 @@
                 <!-- DTMレッスン -->
                 <div id="dtm-lesson" class="lesson-item">
                     <div class="lesson-icon">
-                        <i class="fas fa-laptop"></i>
+                        <img src="images/icon_dtm.png" alt="DTM Icon">
                     </div>
                     <div class="lesson-details">
                         <h3>DTM Lesson</h3>
@@ -1066,7 +1066,7 @@
                 <!-- 作曲レッスン -->
                 <div id="compose-lesson" class="lesson-item">
                     <div class="lesson-icon">
-                        <i class="fas fa-music"></i>
+                        <img src="images/icon_comp.png" alt="Compose Icon">
                     </div>
                     <div class="lesson-details">
                         <h3>Compose Lesson</h3>
